# orcAI

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  all_euler2laptop  auxiliary.py  load.py  model.py  oo23_184a008_pred.txt  orcai-v1.md  plot.py  pyproject.toml  setup.py  spectrogram.py
AnalyseData/: data_stats.py  ms_figures.py
FinalModel/: model.dict  model.index
GenericParameters/: call.dict  channels_and_labels.csv  directories.dict  extract_snippets.dict  segments.dict
MakeData/: create_labels.py  create_snippets.py  create_spectrogram.py  create_tvtdata.py  extract_snippets.py
Scripts/: all_laptop2euler.sh  all_specs_euler.sh  all_specs_laptop.sh  create_labels_laptop.sh  create_snippets_euler.sh  create_spec.sh  create_tvtdata.sh  progs_laptop2euler.sh  rsync_progs_laptop2euler.sh  rsync_results_euler2laptop  sbatch_create_all_specs.sh  sbatch_create_labels.sh  sbatch_create_snippets.sh  sbatch_create_tvtdata.sh  sbatch_hyperparam.sh  sbatch_rsync_spec_nas2scratch  sbatch_rsync_spec_scratch2nas  sbatch_rsync_tvtdata_nas2scratch  sbatch_rsync_tvtdata_scratch2nas  sbatch_touch_scratch  sbatch_train_cnn.sh  sbatch_train_lstm.sh  sbatch_train_transformer.sh  tvtdata_laptop2euler.sh
Train_and_Test/: cluster_debug.py  commands  hyperparameter_search.py  oo23_184a008_pred.txt  predict_wav2annot.py  test_model.py  train_model.py
src/: auxiliary.py  cli.py  model.py
src/Train_and_Test/: train_model.py
src/orcAI/: __init__.py  annotation.py  architectures.py  auxiliary.py  cli.py  helpers.py  hp_search.py  hpsearch.py  hyperparameter_search.py  io.py  (+11 more)
(+13 files in other folders)
